@@ -224,6 +224,11 @@
       \code{kappa(., norm="2")} now warns that it computes the 1-norm with
       (default) \code{exact = FALSE}; prompted by Mikael Jagan's quite
       comprehensive \PR{18543}.
+
+      \item Rd skeletons generated by \code{prompt()} or
+      \code{promptData()} now use a dummy title (so R CMD build works).
+      \code{tools::checkRdContents()} has been updated to detect
+      such template leftovers, including from \code{promptPackage()}.
     }
   }
 }
